@@ -49,8 +49,8 @@ int w_Source_setDirection(lua_State *L);
 int w_Source_getDirection(lua_State *L);
 int w_Source_setCone(lua_State *L);
 int w_Source_getCone(lua_State *L);
-int w_Source_setRelativePosition(lua_State *L);
-int w_Source_hasRelativePosition(lua_State *L);
+int w_Source_setRelative(lua_State *L);
+int w_Source_isRelative(lua_State *L);
 int w_Source_setLooping(lua_State *L);
 int w_Source_isLooping(lua_State *L);
 int w_Source_isStopped(lua_State *L);
